--- a/templates/course/templates/category_actionbar.mustache
+++ b/templates/course/templates/category_actionbar.mustache
@@ -92,12 +92,13 @@
             <div class="navitem">
                 {{> core/url_select }}
             </div>
+            <div class='alert alert-danger'>TEST - Course : categoryselect</div>
         {{/categoryselect}}
         {{#search}}
             <div class="navitem">
                 {{> core/search_input }}
             </div>
-            <div>TEST Prueba</div>
+            <div class='alert alert-danger'>TEST - Course : search</div>
         {{/search}}
         {{#additionaloptions}}
             <div class="ml-auto d-flex">
@@ -113,6 +114,8 @@
                     </div>
                 </div>
             </div>
+            <div class='alert alert-danger'>TEST - Course : additionaloptions</div>
         {{/additionaloptions}}
     </div>
+    <div class='alert alert-danger'>TEST - Course : action_bar</div>
 </div>
