--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -99,9 +99,11 @@ Example context (json):
                     <div id="owl-carousel_slider" class="owl-carousel owl-theme">
                         <div class="item">
                             <img src="{{{slider1}}}" class="image-desktop">
+                            <div class="title">{{#str}}slider1text, theme_ddmood{{/str}}</div>
                         </div>
                         <div class="item">
                             <img src="{{{slider2}}}" class="image-desktop">
+                            <div class="title">{{#str}}slider1text, theme_ddmood{{/str}}</div>
                         </div>
                         <div class="item">
                             <img src="{{{slider3}}}" class="image-desktop">
@@ -122,7 +124,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FAT}}}">
                                 </div>
-                                <div class="title">Fòs Feminista Team</div>
+                                <div class="title">{{#str}}FosFeministaTeam, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -134,7 +136,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">Our Feminist Alliance</div>
+                                <div class="title">{{#str}}OurFeministAlliance, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -146,7 +148,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">Innovation & Social Enterprise Lab</div>
+                                <div class="title">{{#str}}Innovation_SocialEnterpriseLab, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -158,7 +160,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">Center for Evidence-Based Advocacy</div>
+                                <div class="title">{{#str}}Innovation_SocialEnterpriseLab, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -170,7 +172,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">Center for Legal Responses</div>
+                                <div class="title">{{#str}}CenterforLegalResponses{{/str}}</div>
                             </div>
                         </a>
                      </div>
@@ -182,7 +184,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-CTN}}}">
                                 </div>
-                                <div class="title">Center for Transformative Narratives</div>
+                                <div class="title">{{#str}}CenterforTransformativeNarratives{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -194,7 +196,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">Center for CSE & Youth-Friendly Services</div>
+                                <div class="title">{{#str}}CenterforCSE&Youth-FriendlyServices{{/str}}</div>
                             </div>
                         </a>
                     </div>
