--- a/style/scss/moodle.scss
+++ b/style/scss/moodle.scss
@@ -7,6 +7,7 @@
 
 @import "layouts/footer";
 @import "layouts/login";
+@import "layouts/coursecategory";
 
 @import "components/navBar";
 @import "components/table";
