--- a/templates/theme_boost/footer.mustache
+++ b/templates/theme_boost/footer.mustache
@@ -40,9 +40,9 @@
                     <img src="{{{logofooter}}}" class="logo">
                 </div>
                 
-                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">Privacy Policy</a> | <a href="/local/staticpage/view.php?page=privacy_policy">Terms of Use</a></div>
+                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}PrivacyPolicy{{/str}}</a> | <a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}TermsofUse{{/str}}</a></div>
             </div>
-            <div class="footer_bottom">By accessing this learning management system, you are agreeing to abide by the Terms of and Conditions of Use. This includes ensuring that this is a space free of abuse, discrimination, and offensive material, as well as a site where confidentiality is respected and personal opinions expressed are not shared externally.</div>
+            <div class="footer_bottom">{{#str}}textfooter{{/str}}</div>
         </div>
         <!--
         <div class="container">
