--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -103,10 +103,11 @@ Example context (json):
                         </div>
                         <div class="item">
                             <img src="{{{slider2}}}" class="image-desktop">
-                            <div class="title">{{#str}}slider1text, theme_ddmood{{/str}}</div>
+                            <div class="title">{{#str}}slider2text, theme_ddmood{{/str}}</div>
                         </div>
                         <div class="item">
                             <img src="{{{slider3}}}" class="image-desktop">
+                            <div class="title">{{#str}}slider3text, theme_ddmood{{/str}}</div>
                         </div>
                     </div>
                 </div>
@@ -172,7 +173,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforLegalResponses{{/str}}</div>
+                                <div class="title">{{#str}}CenterforLegalResponses, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                      </div>
@@ -184,7 +185,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-CTN}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforTransformativeNarratives{{/str}}</div>
+                                <div class="title">{{#str}}CenterforTransformativeNarratives, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -196,7 +197,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforCSE&Youth-FriendlyServices{{/str}}</div>
+                                <div class="title">{{#str}}CenterforCSE_Youth_FriendlyServices, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
