--- a/templates/theme_boost/footer.mustache
+++ b/templates/theme_boost/footer.mustache
@@ -40,9 +40,9 @@
                     <img src="{{{logofooter}}}" class="logo">
                 </div>
                 
-                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}PrivacyPolicy{{/str}}</a> | <a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}TermsofUse{{/str}}</a></div>
+                <div class="menu_footer"><a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}PrivacyPolicy, theme_ddmood{{/str}}</a> | <a href="{{{config.wwwroot}}}/local/staticpage/view.php?page=privacy_policy">{{#str}}TermsofUse, theme_ddmood{{/str}}</a></div>
             </div>
-            <div class="footer_bottom">{{#str}}textfooter{{/str}}</div>
+            <div class="footer_bottom">{{#str}}textfooter, theme_ddmood{{/str}}</div>
         </div>
         <!--
         <div class="container">
