--- a/style/moodle.css
+++ b/style/moodle.css
@@ -106,81 +106,130 @@ h5 {
   color: #5c3873 !important;
 }
 
-.fos_feminista_team {
+.container_cat {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  padding: 4px;
+  margin: 0 auto 50px;
+}
+.container_cat .child {
+  width: 190px;
+  height: 194px;
+  margin: 5px;
+  padding: 10px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 9.5px;
+}
+.container_cat .child .cat-cta {
+  cursor: pointer;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
+  grid-auto-columns: 1fr;
+  gap: 8px 8px;
+  grid-auto-flow: row;
+  justify-content: stretch;
+  align-items: stretch;
+  grid-template-areas: "icon" "title_cat";
+}
+.container_cat .child .cat-cta .icon {
+  justify-self: center;
+  grid-area: icon;
+  width: 92px;
+  height: 92px;
+}
+.container_cat .child .cat-cta .icon img {
+  width: 92px;
+  height: 92px;
+}
+.container_cat .child .cat-cta .title_cat {
+  align-self: center;
+  grid-area: title_cat;
+  font-family: "Isidora Sans Medium", sans-serif;
+  letter-spacing: 1px !important;
+  font-size: 0.9rem !important;
+  text-align: center;
+  line-height: 0.9rem !important;
+}
+.container_cat .fos_feminista_team {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_457)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%235C3873"/></g><defs><filter id="filter0_d_317_457" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_457"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_457" result="shape"/></filter></defs></svg>');
 }
-.fos_feminista_team a {
+.container_cat .fos_feminista_team a {
+  font-weight: 400;
+  color: #f9f2ea;
   text-decoration: none !important;
+}
+.container_cat .fos_feminista_team a:hover {
   color: #f9f2ea !important;
 }
-.fos_feminista_team a:hover {
-  color: #f9f2ea !important;
-}
-
-.our_feminist_alliance {
+.container_cat .our_feminist_alliance {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_464)"><path d="M182.5 2H11.5C6.2533 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%2360AD8F"/></g><defs><filter id="filter0_d_317_464" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_464"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_464" result="shape"/></filter></defs></svg>');
 }
-.our_feminist_alliance a {
+.container_cat .our_feminist_alliance a {
+  font-weight: 600;
+  color: #383d47;
   text-decoration: none !important;
+}
+.container_cat .our_feminist_alliance a:hover {
   color: #383d47 !important;
 }
-.our_feminist_alliance a:hover {
-  color: #383d47 !important;
-}
-
-.innovation_social_enterprise_lab {
+.container_cat .innovation_social_enterprise_lab {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_474)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%23383D47"/><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="black" fill-opacity="0.2"/></g><defs><filter id="filter0_d_317_474" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_474"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_474" result="shape"/></filter></defs></svg>');
 }
-.innovation_social_enterprise_lab a {
+.container_cat .innovation_social_enterprise_lab a {
+  font-weight: 400;
+  color: #f9f2ea;
   text-decoration: none !important;
+}
+.container_cat .innovation_social_enterprise_lab a:hover {
   color: #f9f2ea !important;
 }
-.innovation_social_enterprise_lab a:hover {
-  color: #f9f2ea !important;
-}
-
-.center_for_evidence_based_Advocacy {
+.container_cat .center_for_evidence_based_Advocacy {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_498)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%23C71585"/></g><defs><filter id="filter0_d_317_498" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_498"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_498" result="shape"/></filter></defs></svg>');
 }
-.center_for_evidence_based_Advocacy a {
+.container_cat .center_for_evidence_based_Advocacy a {
+  font-weight: 400;
+  color: #f9f2ea;
   text-decoration: none !important;
-  color: #383d47 !important;
 }
-.center_for_evidence_based_Advocacy a:hover {
-  color: #383d47 !important;
+.container_cat .center_for_evidence_based_Advocacy a:hover {
+  color: #f9f2ea !important;
 }
-
-.center_for_legal_responses {
+.container_cat .center_for_legal_responses {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_532)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%23E8CD0A"/></g><defs><filter id="filter0_d_317_532" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_532"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_532" result="shape"/></filter></defs></svg>');
 }
-.center_for_legal_responses a {
+.container_cat .center_for_legal_responses a {
+  font-weight: 600;
+  color: #383d47;
   text-decoration: none !important;
+}
+.container_cat .center_for_legal_responses a:hover {
   color: #383d47 !important;
 }
-.center_for_legal_responses a:hover {
-  color: #383d47 !important;
-}
-
-.center_for_transformative_Narratives {
+.container_cat .center_for_transformative_Narratives {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_574)"><path d="M182.5 2H11.5C6.2533 2 2 6.2533 2 11.5V140.561C2 143.991 3.84869 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.2533 187.747 2 182.5 2Z" fill="%2300D4D9"/></g><defs><filter id="filter0_d_317_574" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_574"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_574" result="shape"/></filter></defs></svg>');
 }
-.center_for_transformative_Narratives a {
+.container_cat .center_for_transformative_Narratives a {
+  font-weight: 600;
+  color: #383d47;
   text-decoration: none !important;
+}
+.container_cat .center_for_transformative_Narratives a:hover {
   color: #383d47 !important;
 }
-.center_for_transformative_Narratives a:hover {
-  color: #383d47 !important;
-}
-
-.center_for_CSE_youth_friendly_services {
+.container_cat .center_for_CSE_youth_friendly_services {
   background-image: url('data:image/svg+xml,<svg width="198" height="201" viewBox="0 0 198 201" fill="none" xmlns="http://www.w3.org/2000/svg"><g filter="url(%23filter0_d_317_584)"><path d="M182.5 2H11.5C6.25329 2 2 6.2533 2 11.5V140.561C2 143.991 3.8487 147.154 6.83684 148.838L86.1838 193.542C88.9139 195.081 92.2269 195.173 95.0389 193.791L186.692 148.723C189.941 147.125 192 143.819 192 140.198V11.5C192 6.25329 187.747 2 182.5 2Z" fill="%23F06043"/></g><defs><filter id="filter0_d_317_584" x="0" y="0" width="198" height="202" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB"><feFlood flood-opacity="0" result="BackgroundImageFix"/><feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/><feOffset dx="2" dy="2"/><feGaussianBlur stdDeviation="2"/><feComposite in2="hardAlpha" operator="out"/><feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/><feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_317_584"/><feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_317_584" result="shape"/></filter></defs></svg>');
 }
-.center_for_CSE_youth_friendly_services a {
+.container_cat .center_for_CSE_youth_friendly_services a {
+  font-weight: 400;
+  color: #f9f2ea;
   text-decoration: none !important;
-  color: #383d47 !important;
 }
-.center_for_CSE_youth_friendly_services a:hover {
-  color: #383d47 !important;
+.container_cat .center_for_CSE_youth_friendly_services a:hover {
+  color: #f9f2ea !important;
 }
 
 .ddmood-footer {
@@ -4840,58 +4889,6 @@ body #page-wrapper #page #region-main {
   height: 194px;
   margin: 0 4px;
   background-color: #eb66a2;
-}
-
-.container_cat {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  padding: 4px;
-  margin: 0 auto;
-}
-.container_cat .child {
-  width: 190px;
-  height: 194px;
-  margin: 5px;
-  padding: 10px;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 9.5px;
-  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.1));
-}
-.container_cat .child .cat-cta {
-  cursor: pointer;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr;
-  grid-auto-columns: 1fr;
-  gap: 8px 8px;
-  grid-auto-flow: row;
-  justify-content: stretch;
-  align-items: stretch;
-  grid-template-areas: "icon" "title";
-}
-.container_cat .child .cat-cta .icon {
-  justify-self: center;
-  grid-area: icon;
-  width: 92px;
-  height: 92px;
-}
-.container_cat .child .cat-cta .icon img {
-  width: 92px;
-  height: 92px;
-}
-.container_cat .child .cat-cta .title {
-  align-self: center;
-  grid-area: title;
-  font-family: "Isidora Sans Medium", sans-serif;
-  letter-spacing: 1px;
-  font-size: 1rem !important;
-  text-align: center;
-  word-wrap: 0px;
-  font-weight: 800;
-  line-height: 1rem;
 }
 
 .custom-inner {
