--- a/templates/frontpage.mustache
+++ b/templates/frontpage.mustache
@@ -125,7 +125,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FAT}}}">
                                 </div>
-                                <div class="title">{{#str}}FosFeministaTeam, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}FosFeministaTeam, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -137,7 +137,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}OurFeministAlliance, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}OurFeministAlliance, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -149,7 +149,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}Innovation_SocialEnterpriseLab, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}Innovation_SocialEnterpriseLab, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -161,7 +161,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}Innovation_SocialEnterpriseLab, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}CenterforEvidence-BasedAdvocacy, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -173,7 +173,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforLegalResponses, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}CenterforLegalResponses, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                      </div>
@@ -185,7 +185,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-CTN}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforTransformativeNarratives, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}CenterforTransformativeNarratives, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
@@ -197,7 +197,7 @@ Example context (json):
                                 <div class="icon">
                                     <img src="{{{i-our_FA}}}">
                                 </div>
-                                <div class="title">{{#str}}CenterforCSE_Youth_FriendlyServices, theme_ddmood{{/str}}</div>
+                                <div class="title_cat">{{#str}}CenterforCSE_Youth_FriendlyServices, theme_ddmood{{/str}}</div>
                             </div>
                         </a>
                     </div>
