--- a/style/scss/components/_owl_carousel.scss
+++ b/style/scss/components/_owl_carousel.scss
@@ -1,13 +1,22 @@
-.title {
-    @include font-header("Isidora Sans Medium");
-    font-size: 1.2rem;
+#owl-carousel_slider {
+  @include font-header("Isidora Sans Medium");
+  font-size: 1.2rem;
+
+  .item {
+    position: relative;
+      .title {
+        position: absolute;
+        top: 20%;
+        left: 10%;
+      }
+  }
 }
 .slider_clour_text_white {
-    color: $white;
+  color: $white;
 }
 .slider_clour_text_orange {
-    color: $orange;
+  color: $orange;
 }
 .slider_clour_text_green {
-    color: $green;
+  color: $green;
 }
