--- a/templates/coursecategory.mustache
+++ b/templates/coursecategory.mustache
@@ -17,6 +17,20 @@
                     <div class="title">Lorem ipsum dor</div>
                 </div>
             </div>
+            <div class="cta-btns">
+                <div class="cta-left">
+                    <button class="btn_icon-fos">
+                        <div class="icon-blog"></div>
+                        <span>Community</span>
+                    </button>
+                </div>
+                <div class="cta-right">
+                    <button class="btn_icon-fos">
+                        <div class="icon-lab"></div>
+                        <span>Knowledge Sharing</span>
+                    </button>
+                </div>
+            </div>
             <div class="content-category">{{{contentcategory}}}</div>
         </div>
     </div>
